alignment in rating container had broken in desktop when fixed in mobile...now it's correct in both

--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -197,8 +197,13 @@ footer {
     height: 3.5rem;
   }
 
+  .star-wrapper {
+    margin-top: unset;
+  }
+
   .ratings p {
     padding-right: 45px;
+    margin-bottom: unset;
   }
 
   .ratings:first-of-type {
